service-mesh/istio/sample/bookinfo/bookinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: istio-system
  name: bookinfo-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: bookinfo-ingress.b57565928af64bcd8a8b.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
